--- a/_config.yml
+++ b/_config.yml
@@ -3,13 +3,13 @@
 #
 
 # Name of your site (displayed in the header)
-name: Reverie
+name: VuthySruy
 
 # Name of the author
-author: Amit Merchant
+author: VuthySruy
 
 # Short bio or description (displayed in the header)
-description: An elegant Jekyll theme
+description: VuthySruy's CV and Portfolio
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: /images/reverie.png
