--- a/_config.yml
+++ b/_config.yml
@@ -3,13 +3,13 @@
 #
 
 # Name of your site (displayed in the header)
-name: VuthySruy
+name: Reverie
 
 # Name of the author
-author: VuthySruy
+author: Amit Merchant
 
 # Short bio or description (displayed in the header)
-description: VuthySruy's CV and Portfolio
+description: An elegant Jekyll theme
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: /images/reverie.png
@@ -21,7 +21,7 @@ avatar: /images/reverie.png
 # Includes an icon in the footer for each username you enter
 footer-links:
   dribbble:
-  email: vuthysruy@gmail.com
+  email: amit.d.merchant@gmail.com
   facebook:
   flickr:
   github: amitmerchant1990/reverie
@@ -48,14 +48,14 @@ google_analytics: UA-43339302-11
 
 # Your website URL (e.g. http://amitmerchant1990.github.io or http://www.amitmerchant.com)
 # Used for Sitemap.xml and your RSS feed
-url: https://vuthysruy.github.io/
-enforce_ssl: https://vuthysruy.github.io/
+url: http://www.amitmerchant.com/reverie
+enforce_ssl: https://www.amitmerchant.com/reverie
 
 # If you're hosting your site at a Project repository on GitHub pages
 # (http://yourusername.github.io/repository-name)
 # and NOT your User repository (http://yourusername.github.io)
 # then add in the baseurl here, like this: "/repository-name"
-baseurl: "/VuthySruy.github.io"
+baseurl: "/reverie"
 
 #
 # !! You don't need to change any of the configuration flags below !!
@@ -64,7 +64,7 @@ baseurl: "/VuthySruy.github.io"
 permalink: /:title/
 
 # The release of Jekyll Now that you're using
-version: v2.4.3
+version: v1.2.0
 
 # Jekyll 3 now only supports Kramdown for Markdown
 kramdown:
@@ -78,7 +78,7 @@ kramdown:
 
 # Set the Sass partials directory, as we're using @imports
 sass:
-  style: :compressed # You might prefer to minify using :compressed
+  style: :expanded # You might prefer to minify using :compressed
 
 # Use the following plug-ins
 plugins:
