--- a/_config.yml
+++ b/_config.yml
@@ -3,14 +3,13 @@
 #
 
 # Name of your site (displayed in the header)
-name: Una sinfonía en C#
+name: Vuthy Sruy
 
 # Name of the author
-author: Leonardo Micheloni
+author: Vuthy Sruy
 
 # Short bio or description (displayed in the header)
-description: Un humilde aporte a la comunidad de habla hispana.
-
+description: Vuthy Sruy's CV and Portfolio
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: https://mvp.microsoft.com/Content/Images/mvp-banner.png
 
