--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ name: Vuthy Sruy
 author: Vuthy Sruy
 
 # Short bio or description (displayed in the header)
-description: Vuthy Sruy's CV and Portfolio
+description: CV and Portfolio
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: https://mvp.microsoft.com/Content/Images/mvp-banner.png
 
