--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ author: Vuthy Sruy
 # Short bio or description (displayed in the header)
 description: CV and Portfolio
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: VuthySruy.github.io\images
+avatar: /images/profile.png
 
 #
 # Flags below are optional
