--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ name: Vuthy Sruy
 author: Vuthy Sruy
 
 # Short bio or description (displayed in the header)
-description: CV and Portfolio
+description: Hellow World!
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: /images/profile.png
 
