--- a/_config.yml
+++ b/_config.yml
@@ -23,14 +23,14 @@ footer-links:
   # email: amit.d.merchant@gmail.com
   facebook:
   flickr:
-  github: leomicheloni
+  github: https://github.com/VuthySruy
   instagram:
-  linkedin: leomicheloni
+  linkedin: https://www.linkedin.com/in/vuthy-sruy-104755228/
   pinterest:
   rss: rss
-  twitter: leomicheloni
+  twitter: https://twitter.com/200_Pong
   stackoverflow: 
-  youtube: channel/UCQlqd6byJpXtGuYrL4cElgw
+  youtube: https://www.youtube.com/channel/UC1avLl4lDdEgmmhDv8tfkew
   googleplus: # anything in your profile username that comes after plus.google.com/
   playconsole:
 
