--- a/_config.yml
+++ b/_config.yml
@@ -20,17 +20,17 @@ avatar: /images/profile.png
 # Includes an icon in the footer for each username you enter
 footer-links:
   dribbble:
-  # email: amit.d.merchant@gmail.com
-  facebook:
+  # email: vuthysruy@gmail.com
+  facebook: QCumBr
   flickr:
-  github: https://github.com/VuthySruy
+  github: VuthySruy
   instagram:
-  linkedin: https://www.linkedin.com/in/vuthy-sruy-104755228/
+  linkedin: vuthy-sruy-104755228
   pinterest:
   rss: rss
-  twitter: https://twitter.com/200_Pong
+  twitter: 200_Pong
   stackoverflow: 
-  youtube: https://www.youtube.com/channel/UC1avLl4lDdEgmmhDv8tfkew
+  youtube: @vuthy2069
   googleplus: # anything in your profile username that comes after plus.google.com/
   playconsole:
 
