--- a/_config.yml
+++ b/_config.yml
@@ -30,7 +30,7 @@ footer-links:
   rss: rss
   twitter: 200_Pong
   stackoverflow: 
-  youtube: vuthy2069
+  youtube: channel/UC1avLl4lDdEgmmhDv8tfkew
   googleplus: # anything in your profile username that comes after plus.google.com/
   playconsole:
 
